--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.1.61'
-    id 'org.jetbrains.kotlin.plugin.spring' version '1.1.61'
+    id 'org.jetbrains.kotlin.jvm' version '1.2.0'
+    id 'org.jetbrains.kotlin.plugin.spring' version '1.2.0'
+    id 'org.jetbrains.kotlin.plugin.jpa' version '1.2.0'
     id 'org.mikeneck.junit.starter.normal' version '5.0.2'
     id 'org.springframework.boot' version '1.5.9.RELEASE'
 }
@@ -10,7 +11,8 @@ version '0.1-SNAPSHOT'
 
 ext {
     axonVersion = '3.0.7'
-    kotlinVersion = '1.1.61'
+    h2Version = '1.4.196'
+    kotlinVersion = '1.2.0'
     springBootVersion = '1.5.9.RELEASE'
 }
 
@@ -19,13 +21,14 @@ repositories {
 }
 
 dependencies {
+    compile group: 'javax.inject', name: 'javax.inject', version: '1'
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: kotlinVersion
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jre8', version: kotlinVersion
     compile group: 'org.axonframework', name: 'axon-spring-boot-starter', version: axonVersion
     compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: springBootVersion
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion
-//    compile group: 'org.springframework.boot', name: 'spring-boot-starter-freemarker', version: springBootVersion
-//    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-mongodb', version: springBootVersion
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: springBootVersion
+    compile group: 'com.h2database', name: 'h2', version: h2Version
 }
 
 compileKotlin {
