--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ repositories {
     jcenter()
 }
 
+allprojects {
+    apply plugin: 'org.jetbrains.kotlin.jvm'
+}
+
 dependencies {
     compile group: 'javax.inject', name: 'javax.inject', version: '1'
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: kotlinVersion
@@ -29,6 +33,7 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: springBootVersion
     compile group: 'com.h2database', name: 'h2', version: h2Version
+    compile project(':adapter')
 }
 
 compileKotlin {
